# OSBot-Serverless-Services

./: .gitmodules  README.md  aws_localstack.sh  pyproject.toml  start-local-server.sh
.github/actions/aws__deploy-lambda/: action.yml
.github/actions/docker__start-lambda-docker/: action.yml
.github/actions/docker__start-prefect-server/: action.yml
.github/actions/docker__stop-lambda-docker/: action.yml
.github/actions/pytest__run-qa/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
deploy/lambdas/: Deploy_Lambda__OSBot_Serverless_Flows.py  test_Deploy_Lambda__OSBot_Serverless_Flows.py
deploy/test_aws_events/: handler.py  test___events_on_live_aws.py
osbot_serverless_flows/: Serverless_Flows__Shared_Objects.py
osbot_serverless_flows/lambdas/: handler.py
osbot_serverless_flows/playwright/: Playwright__Serverless.py
osbot_serverless_flows/utils/: OSBot_Serverless_Flows__Local_Stack.py  OSBot_Serverless_Flows__Shared_Objects.py
osbot_serverless_services/utils/: Version.py
tests/: pytest.ini
tests/integration/: fast_api_objs_for_tests.py  test_Deploy_Lambda__OSBot_Serverless_Flows.py  test_Serverless_Flows__Server_Config.py  test_Serverless_Flows__Shared_Objects.py  test__fastapi__via_boto3.py  test__fastapi__via_requests.py  test__for_integration_tests.py  test__local_docker_image.py  test__remote_shell__local_docker.py
tests/qa/: for_qa_tests.py  test__live_lambda_server.py  test__remote_shell__lambda.py  test__remote_shell_docker.py  test__remote_shell_lambda.py  test__remove_shell_lambda.py
(+60 files in other folders)
