[tool.poetry]
name        = "osbot_serverless_services"
version     = "v0.1.13"
description = "OSBot Serverless Services"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/OSBot-Serverless-Services"
repository  = "https://github.com/owasp-sbot/OSBot-Serverless-Services"

[tool.poetry.dependencies]
python          = "^3.11"
osbot-utils     = "*"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
